# fdk-aac

./: CMakeLists.txt  Makefile.am  aac-dec.c  configure.ac  m4a-dec.c
libAACenc/src/: aacenc_lib.cpp
libMpegTPEnc/: CMakeLists.txt
